--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Das Keyboard
 email: camille@metadot.com
 email_name: camille@
-baseurl: "" # the subpath of your site, e.g. /blog/
+baseurl: "https://daskeyboard.github.io/q-website/" # the subpath of your site, e.g. /blog/
 url: "https://daskeyboard.github.io/q-website/"
 github_username: DasKeyboard
 
