Update test Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ script: ./tool/travis.sh
 
 
 deploy:
+  local-dir: docs
   provider: pages
   skip-cleanup: true
-  github-token: $GITHUB_TOKEN  # Set in travis-ci.org dashboard, marked secure
   keep-history: true
   on:
     branch: master
