--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 source:          .
-destination:     ./staging
+destination:     ./_site
 
 title: Das Keyboard
 email: camille@metadot.com
