Add git add before deploy.

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ script: "./tool/travis.sh"
 
 before_deploy: 
   - echo "Building site."
-  - bundle exec jekyll build --watch
-
+  - bundle exec jekyll build 
+  - git add
 deploy:
   provider: firebase
   token:
