--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: Das Keyboard
 email: camille@metadot.com
 email_name: camille@
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "https://daskeyboard.github.io"
+url: "https://www.daskeyboard.io"
 github_username: DasKeyboard
 
 # Build settings
