--- a/_data/docs_cards.yml
+++ b/_data/docs_cards.yml
@@ -1,6 +1,6 @@
 - name: Get Started as a user
   description: Set up your environment and start using the Q Desktop application.
-  url: /Daskeyboard.io/get-started/download/
+  url: /get-started/download/
 - name: Get Started as a developer
   description: Read the Q developer API and start sending your own signals to your Q keyboard.
-  url: /Daskeyboard.io/q-api-doc/
+  url: /q-api-doc/
