Removing double build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ before_install:
 - "./tool/before_install.sh"
 script: "./tool/travis.sh"
 before_deploy:
-- echo "Building site..."
-- bundle exec jekyll build
+#- echo "Building site..."
+#- bundle exec jekyll build
 deploy:
   provider: firebase
   skip_cleanup: true
