Added libcurl version instead of curl on Travis CI.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ before_install:
 - rvm install 2.3.0
 - rvm use 2.3.0
 - sudo update-ca-certificates
+- sudo apt-get install libcurl4-openssl-dev
 - "./tool/before_install.sh"
 script: "./tool/travis.sh"
 before_deploy:
