--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ node_js:
 - '8.1'
 sudo: required
 before_install:
+- sudo apt-get update
 - rvm install 2.4.8
 - rvm use 2.4.8
 - sudo update-ca-certificates
